fix: thumbstick overflow bug

--- a/s/web/templates/style-partials/_game.scss
+++ b/s/web/templates/style-partials/_game.scss
@@ -1,4 +1,8 @@
 
+.game {
+	overflow: hidden;
+}
+
 .game, .game body, .game canvas {
 	position: relative;
 	height: 100vh;
